# fast-search

build-release/: .project
include/: application.h  user.h
source/: CMakeLists.txt  application.cpp  main.cpp
